--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -3,7 +3,8 @@
   flex-direction: row;
   align-items: center;
   max-width: 800px;
-  margin: 20px 0;
+  margin: 0 auto;
+  padding: 20px 0;
   gap: 40px;
 }
 
